--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cc = "1.0.69"
+cxx = "1.0"
+
+[build-dependencies]
+cxx-build = "1.0"
+cc = "1.0.69"
